--- a/docs/releases/release_notes/6.0.md
+++ b/docs/releases/release_notes/6.0.md
@@ -7,10 +7,12 @@
 ## v6.0.0 (UNRELEASED)
 
 ```shell
-OVA SHA256: FIXME
-OVA MD5: FIXME
-QCOW SHA256: FIXME
-QCOW MD5: FIXME
+# ipfabric-6-0-0+21.ova
+OVA SHA256: 1e38629e5e9601f996389d6e1eba3b4a0d526240dac5f42c7a7820379ca19a90
+OVA MD5: edf241c2e1e8db2be17457bf5a1ae559
+# ipfabric-6-0-0+21.qcow2
+QCOW SHA256: 33fd3659b332605cc677ba396f56bee1e22dca6a783cbd196810722a0a97adaf
+QCOW MD5: 12515e63fbff45ddd40ae24a02a9f13f
 ```
 
 ### Attributes
