Remove unreleased status from 6.0.0 documentation

--- a/docs/releases/release_notes/6.0.md
+++ b/docs/releases/release_notes/6.0.md
@@ -1,10 +1,6 @@
 # IP Fabric v6.0 (Aertex)
 
-!!! warning
-
-    This version has not been released yet and release notes are draft only.
-
-## v6.0.0 (UNRELEASED)
+## v6.0.0 (Nov 16th, 2022)
 
 ```shell
 # ipfabric-6-0-0+21.ova
