--- a/docs/releases/release_notes/6.0.md
+++ b/docs/releases/release_notes/6.0.md
@@ -25,7 +25,7 @@ You can now specify the level of access a user has by restricting the ability to
 ### Assurance Engine
 
 - Assurance Engine is a new tab found under global and snapshot settings.
-- Users can now disable specific task to speed up discovery. You can toggle the following features from the Assurance Engine.
+- Users can now disable specific tasks to speed up discovery. You can toggle the following features from the Assurance Engine:
   - Loading Graph Cache
   - Save Historical Data
   - Compute Intent Verification Rules
@@ -52,12 +52,12 @@ You can now specify the level of access a user has by restricting the ability to
 - Forcepoint NGFW -- Added support of basic discovery in firewall/vpn mode (see our [feature matrix](https://matrix.ipfabric.io) for more details).
 - Cisco -- Added support for collecting FabricPath data.
 - Discovery bandwidth limit can be set up to 100Mb/s in UI.
-- The number of discovery workers running in parallel can be tuned, please contact the IP Fabric support team.
+- The number of discovery workers running in parallel can be tuned, please contact the IP Fabric support team for guidance.
 - Cisco ASA, IOS, IOS-XE, NX-OS -- Added support for route maps and prefix-lists (IPv4 and IPv6)
 - Hostname parsing was improved, domain parsing was added (when applicable).
 - On Palo Alto firewall new hostname format is used -- `hostname/vsysName` instead of `hostname/vsysId`.
-- Logical Devices -- Added a summary table of all discovered logical firewalls (contexts, vsys, VDOM) and Cisco Nexus VDCs.
-- AWS -- it is now possible to set multiple regions and assume roles in one configuration.
+- Logical Devices -- Added a summary table of all discovered logical firewalls (contexts, VSYS, VDOM) and Cisco Nexus VDCs.
+- AWS -- it is now possible to set multiple regions and [AssumeRoles](https://docs.aws.amazon.com/STS/latest/APIReference/API_AssumeRole.html) in one configuration.
 - Huawei -- New OS version parsing. We now show more Huawei like OS versioning e.g. `V800R021C00SPC100` instead of `8.210`.
 
 ### Logging
@@ -66,4 +66,4 @@ You can now specify the level of access a user has by restricting the ability to
 
 ### EULA
 
-- Updated End User Licensing agreement (EULA). Current users may be asked to resign any existing EULA.
+- Updated the End User Licensing agreement (EULA). Current users may be asked to resign any existing EULA.
