add `ipfabric-update-6_0_0+21.tar.gz.sig` checksums !277

--- a/docs/releases/release_notes/6.0.md
+++ b/docs/releases/release_notes/6.0.md
@@ -9,6 +9,9 @@ OVA MD5: edf241c2e1e8db2be17457bf5a1ae559
 # ipfabric-6-0-0+21.qcow2
 QCOW SHA256: 33fd3659b332605cc677ba396f56bee1e22dca6a783cbd196810722a0a97adaf
 QCOW MD5: 12515e63fbff45ddd40ae24a02a9f13f
+# ipfabric-update-6_0_0+21.tar.gz.sig
+TAR SHA256: 3dad74435f66e26260b47f47616b5a680ab4fb71b535d35e437f868964e4d8b7
+TAR MD5: afbe34c8e97bc66c2af111c1ad3715ac
 ```
 
 ### Attributes
