--- a/docs/releases/release_notes/6.0.md
+++ b/docs/releases/release_notes/6.0.md
@@ -14,6 +14,10 @@ TAR SHA256: 3dad74435f66e26260b47f47616b5a680ab4fb71b535d35e437f868964e4d8b7
 TAR MD5: afbe34c8e97bc66c2af111c1ad3715ac
 ```
 
+### Important Notes
+
+- Upgrade to `v6.0.0` will break custom SSO integrations an will require a change to the `/etc/ipf-dex.yaml` file. Simply replace the `v5.0` in this file with `v6.0` and then run `systemctl restart ipf-dex`. If you would like assistance please contact your Solution Architect.
+
 ### Attributes
 
 You can now configure custom attributes for devices, this can be found under `Settings` --> `Device Attributes`.
