Locked snapshots are not migrated

--- a/docs/releases/release_notes/6.0.md
+++ b/docs/releases/release_notes/6.0.md
@@ -17,6 +17,7 @@ TAR MD5: afbe34c8e97bc66c2af111c1ad3715ac
 ### Important Notes
 
 - Upgrade to `v6.0.0` will break custom SSO integrations an will require a change to the `/etc/ipf-dex.yaml` file. Simply replace the `v5.0` in this file with `v6.0` and then run `systemctl restart ipf-dex`. If you would like assistance please contact your Solution Architect.
+- This release brings changes to IP Fabric data model, snapshots need to be **unloaded and loaded back** to be updated. **The locked snapshots are not unloaded automatically**. You need to reload them manually after upgrade (unlock them, perform unload, load them back and lock them again). Otherwise, you might experience issues with diagrams and you will be missing attributes from the snapshot.
 
 ### Attributes
 
