--- a/docs/releases/release_notes/6.0.md
+++ b/docs/releases/release_notes/6.0.md
@@ -2,6 +2,10 @@
 
 ## v6.0.0 (Nov 16th, 2022)
 
+!!! important "Not a GA"
+
+    This release is available only to early adopters for testing purposes.
+
 ```shell
 # ipfabric-6-0-0+21.ova
 OVA SHA256: 1e38629e5e9601f996389d6e1eba3b4a0d526240dac5f42c7a7820379ca19a90
