Fix typo "complext" in release notes

--- a/docs/releases/low-level_release_notes/4.x/4.3.x/4.3.0.md
+++ b/docs/releases/low-level_release_notes/4.x/4.3.x/4.3.0.md
@@ -68,7 +68,7 @@ Anything that we considered an incorrect behavior. Something that was not workin
 
 ## Tasks
 
-Task may be associated into Epics or Stories to form complext features.
+Task may be associated into Epics or Stories to form complex features.
 
 - [NIM-16](https://ipfabric.atlassian.net/browse/NIM-16) -- Medium -- Table reports display the results as radar chart or bar chart
 - [NIM-256](https://ipfabric.atlassian.net/browse/NIM-256) -- Medium -- Configure email settings
