--- a/docs/releases/low-level_release_notes/4.x/4.3.x/4.3.1.md
+++ b/docs/releases/low-level_release_notes/4.x/4.3.x/4.3.1.md
@@ -10,6 +10,6 @@ Anything that we considered an incorrect behavior. Something that was not workin
 
 ## Tasks
 
-Task may be associated into Epics or Stories to form complext features.
+Task may be associated into Epics or Stories to form complex features.
 
 - [NIM-6446](https://ipfabric.atlassian.net/browse/NIM-6446) -- Medium -- HP Aruba CX Logging
