--- a/docs/releases/low-level_release_notes/4.x/4.3.x/4.3.2.md
+++ b/docs/releases/low-level_release_notes/4.x/4.3.x/4.3.2.md
@@ -21,7 +21,7 @@ Anything that we considered an incorrect behavior. Something that was not workin
 
 ## Tasks
 
-Task may be associated into Epics or Stories to form complext features.
+Task may be associated into Epics or Stories to form complex features.
 
 - [NIM-7145](https://ipfabric.atlassian.net/browse/NIM-7145) -- Medium -- CheckPoint apiUid - make it less strict
 - [NIM-7212](https://ipfabric.atlassian.net/browse/NIM-7212) -- High -- Use new Meraki vendor API client
