--- a/docs/releases/low-level_release_notes/4.x/4.3.x/4.3.4.md
+++ b/docs/releases/low-level_release_notes/4.x/4.3.x/4.3.4.md
@@ -34,7 +34,7 @@ Anything that we considered an incorrect behavior. Something that was not workin
 
 ## Tasks
 
-Task may be associated into Epics or Stories to form complext features.
+Task may be associated into Epics or Stories to form complex features.
 
 - [NIM-7099](https://ipfabric.atlassian.net/browse/NIM-7099) -- Medium -- Cisco _aci folder
 - [NIM-7379](https://ipfabric.atlassian.net/browse/NIM-7379) -- Medium -- Failing -4.1.0 end-to-end path-lookup test
