--- a/docs/releases/low-level_release_notes/4.x/4.4.x/4.4.0.md
+++ b/docs/releases/low-level_release_notes/4.x/4.4.x/4.4.0.md
@@ -57,7 +57,7 @@ Anything that we considered an incorrect behavior. Something that was not workin
 
 ## Tasks
 
-Task may be associated into Epics or Stories to form complext features.
+Task may be associated into Epics or Stories to form complex features.
 
 - [NIM-2989](https://ipfabric.atlassian.net/browse/NIM-2989) -- High -- Improve Support MATRIX portal
 - [NIM-4597](https://ipfabric.atlassian.net/browse/NIM-4597) -- Medium -- Extreme feature request for Extreme
