--- a/docs/releases/low-level_release_notes/4.x/4.4.x/4.4.2.md
+++ b/docs/releases/low-level_release_notes/4.x/4.4.x/4.4.2.md
@@ -12,6 +12,6 @@ Anything that we considered an incorrect behavior. Something that was not workin
 
 ## Tasks
 
-Task may be associated into Epics or Stories to form complext features.
+Task may be associated into Epics or Stories to form complex features.
 
 - [NIM-7855](https://ipfabric.atlassian.net/browse/NIM-7855) -- Highest -- Use system proxy for Mist discovery
