--- a/docs/releases/low-level_release_notes/5.x/5.0.x/5.0.0.md
+++ b/docs/releases/low-level_release_notes/5.x/5.0.x/5.0.0.md
@@ -65,7 +65,7 @@ Anything that we considered an incorrect behavior. Something that was not workin
 
 ## Tasks
 
-Task may be associated into Epics or Stories to form complext features.
+Task may be associated into Epics or Stories to form complex features.
 
 - [NIM-2361](https://ipfabric.atlassian.net/browse/NIM-2361) -- Medium -- Deleting a report leaves forever unused data in the DB
 - [NIM-2371](https://ipfabric.atlassian.net/browse/NIM-2371) -- Highest -- Tunnels table
