--- a/docs/releases/low-level_release_notes/5.x/5.0.x/5.0.1.md
+++ b/docs/releases/low-level_release_notes/5.x/5.0.x/5.0.1.md
@@ -49,7 +49,7 @@ Anything that we considered an incorrect behavior. Something that was not workin
 
 ## Tasks
 
-Task may be associated into Epics or Stories to form complext features.
+Task may be associated into Epics or Stories to form complex features.
 
 - [NIM-8187](https://ipfabric.atlassian.net/browse/NIM-8187) -- Medium -- Cisco FabricPath implementation
 - [NIM-8585](https://ipfabric.atlassian.net/browse/NIM-8585) -- Medium -- Fortinet NAT Discovery logic issue
