--- a/docs/releases/low-level_release_notes/5.x/5.0.x/5.0.2.md
+++ b/docs/releases/low-level_release_notes/5.x/5.0.x/5.0.2.md
@@ -16,7 +16,7 @@ Anything that we considered an incorrect behavior. Something that was not workin
 
 ## Tasks
 
-Task may be associated into Epics or Stories to form complext features.
+Task may be associated into Epics or Stories to form complex features.
 
 - [NIM-8912](https://ipfabric.atlassian.net/browse/NIM-8912) -- High -- FabricPath - Add feature-set support for cisco nexus.
 - [DOS-744](https://ipfabric.atlassian.net/browse/DOS-744) -- Medium -- nimpee-2.0: boot hang due to UFW issue
