--- a/docs/releases/low-level_release_notes/6.x/6.0.x/6.0.0.md
+++ b/docs/releases/low-level_release_notes/6.x/6.0.x/6.0.0.md
@@ -61,7 +61,7 @@ Anything that we considered an incorrect behavior. Something that was not workin
 
 ## Tasks
 
-Task may be associated into Epics or Stories to form complext features.
+Task may be associated into Epics or Stories to form complex features.
 
 - [NIM-56](https://ipfabric.atlassian.net/browse/NIM-56) -- Low -- UI Dashboard - Add widget / Intent verifications - Add placeholder
 - [NIM-2473](https://ipfabric.atlassian.net/browse/NIM-2473) -- High -- Interface Tunnels
