NIM-9631: make a note about `siteKey` in RN

--- a/docs/releases/release_notes/6.0.md
+++ b/docs/releases/release_notes/6.0.md
@@ -28,6 +28,8 @@ TAR MD5: afbe34c8e97bc66c2af111c1ad3715ac
 
 You can now configure custom attributes for devices, this can be found under `Settings` --> `Device Attributes`.
 
+Site separation is also fully backed by attributes by now. That resulted in API changes, for example `siteKey` has been removed from inventory calls.
+
 ### RBAC
 
 You can now specify the level of access a user has by restricting the ability to use certain API Endpoints, or you can restrict which devices the user has access to via Device Attributes. New settings can be find under:
