ST-131 Slightly polish documentation

--- a/docs/releases/release_notes/6.0.md
+++ b/docs/releases/release_notes/6.0.md
@@ -21,7 +21,7 @@ TAR MD5: afbe34c8e97bc66c2af111c1ad3715ac
 ### Upgrade Notices
 
 - Upgrade to `v6.0` is only supported from `v5.0`. Please, upgrade to the latest `v5.0` before attempting upgrade to `v6.0`.
-- Upgrade to `v6.0` will break custom SSO integrations an will require a change to the `/etc/ipf-dex.yaml` file. Simply replace the `v5.0` in this file with `v6.0` and then run `systemctl restart ipf-dex`. If you would like assistance please contact your Solution Architect.
+- Upgrade to `v6.0` will break custom SSO integrations and will require a change to the `/etc/ipf-dex.yaml` file. Simply replace the `v5.0` in this file with `v6.0` and then run `systemctl restart ipf-dex`. If you would like assistance please contact your Solution Architect.
 - This release brings changes to IP Fabric data model, snapshots need to be **unloaded and loaded back** to be updated. **The locked snapshots are not unloaded automatically**. You need to reload them manually after upgrade (unlock them, perform unload, load them back and lock them again). Otherwise, you might experience issues with diagrams and you will be missing attributes from the snapshot.
 
 ### Attributes
@@ -32,7 +32,7 @@ Site separation is also fully backed by attributes by now. That resulted in API 
 
 ### RBAC
 
-You can now specify the level of access a user has by restricting the ability to use certain API Endpoints, or you can restrict which devices the user has access to via Device Attributes. New settings can be find under:
+You can now specify the level of access a user has by restricting the ability to use certain API Endpoints, or you can restrict which devices the user has access to via Device Attributes. New settings can be found under:
 
 - `Settings` --> `User Management` --> `Polices`
 - `Settings` --> `User Management` --> `Roles`
@@ -81,4 +81,4 @@ You can now specify the level of access a user has by restricting the ability to
 
 ### EULA
 
-- Updated the End User Licensing agreement (EULA). Current users may be asked to resign any existing EULA.
+- Updated the End User Licensing agreement (EULA). Current users may be asked to re-sign any existing EULA.
