ST-131 Use cli_root_access.md snippet

--- a/docs/releases/release_notes/5.0.md
+++ b/docs/releases/release_notes/5.0.md
@@ -229,9 +229,7 @@ IP Fabric `v5.0.0` includes Phase 1 of RBAC. The most significant change is that
   - There is still the limitation for changing the `osadmin` account password only via running `nimpee-net-config -t`
   - CLI users logging in as `osadmin` now have `sudo` access
 
-!!! warning
-
-    Any action on the CLI as a `root` and/or `autoboss` user may severely damage the product and/or the system itself. Such actions taken without direct communication with the IP Fabric Support or Solution Architect teams can render the system unusable.
+--8<-- "snippets/cli_root_access.md"
 
 - All TLS version less than `v1.3` have been deprecated.
   - Some older browsers, proxies, or systems may have issues connecting to IP Fabric after this change.
