ST-144: 6.0.1 Release notes

--- a/docs/releases/release_notes/6.0.md
+++ b/docs/releases/release_notes/6.0.md
@@ -1,5 +1,24 @@
 # IP Fabric v6.0 (Aertex)
 
+## v6.0.1 (TBD)
+
+### Bug Fixes
+
+- Discovery -- _discovery_ was hanging on `loadGraphCache` causing infinite discovery
+- Logs -- large logs in `/var/log/nimpee/*` are now not divided into multiple files and are compressed
+- Path Lookup -- IP Fabric GUI crashed when running a certain _E2E Path Lookup_
+- Path Lookup -- MPLS Path lookup displayed a graph incorrectly
+- Path Lookup -- certain _E2E Path lookups_ were displaying `id=null`
+- Diagrams -- `xDP` endpoints were not displayed when viewing a link
+- Cisco -- when `prefix-list` with no entries was present, no prefix lists were parsed for a device
+- Cisco -- `static` MAC Addresses were not part of MAC address tables
+- Cisco -- API calls to `APIC` were getting `400/dataset is too big` response, data are now requested in smaller chunks
+- VMware NSX -- _Diagram_ routing view between `Tier1` and `Tier2` devices was fixed
+- VMware NSX -- virtual machines were not parsed into **Technology --> Cloud**
+- Brocade -- version detection for Ruckus Switches `08.0.70` was fixed
+- F5 -- managed IP addresses had incorrect VRF
+- Aruba -- operating system for ArubaMM devices was not detected correctly
+
 ## v6.0.0 (Nov 16th, 2022)
 
 !!! important "Not a GA"
