--- a/docs/releases/release_notes/6.0.md
+++ b/docs/releases/release_notes/6.0.md
@@ -41,7 +41,8 @@ TAR MD5: afbe34c8e97bc66c2af111c1ad3715ac
 
 - Upgrade to `v6.0` is only supported from `v5.0`. Please, upgrade to the latest `v5.0` before attempting upgrade to `v6.0`.
 - Upgrade to `v6.0` will break custom SSO integrations and will require a change to the `/etc/ipf-dex.yaml` file. Simply replace the `v5.0` in this file with `v6.0` and then run `systemctl restart ipf-dex`. If you would like assistance please contact your Solution Architect.
-- This release brings changes to IP Fabric data model, snapshots need to be **unloaded and loaded back** to be updated. **The locked snapshots are not unloaded automatically**. You need to reload them manually after upgrade (unlock them, perform unload, load them back and lock them again). Otherwise, you might experience issues with diagrams and you will be missing attributes from the snapshot.
+- This release brings changes to IP Fabric data model. Snapshots need to be **unloaded and loaded back** to be updated. **The locked snapshots are not unloaded automatically**. It would help if you reloaded them manually after the upgrade (unlock them, perform unload, load them back and lock them again). Otherwise, you might experience issues with diagrams, and you will be missing attributes from the snapshot.
+- Introduction of RBAC and how security tokens are currently handled led to change in how large file downloads are handled (snapshots, tech supports, and such). Implementation has unfortunate limits, which we will address in the upcoming releases. These include missing the `Content-Length` header due to content being downloaded via JavaScript to browser memory. The practical impact is that the progress bar and ETA must be included. It may be extensive to the RAM.
 
 ### Attributes
 
