Added links to LLRN from the main RN

--- a/docs/releases/release_notes/6.0.md
+++ b/docs/releases/release_notes/6.0.md
@@ -2,6 +2,8 @@
 
 ## v6.0.1 (TBD)
 
+For the list of delivered tickets, please consult the [Low-Level Release Notes for 6.0.1](../low-level_release_notes/6.x/6.0.x/6.0.1.md).
+
 ### Bug Fixes
 
 - Discovery -- _discovery_ was hanging on `loadGraphCache` causing infinite discovery
@@ -36,6 +38,8 @@ QCOW MD5: 12515e63fbff45ddd40ae24a02a9f13f
 TAR SHA256: 3dad74435f66e26260b47f47616b5a680ab4fb71b535d35e437f868964e4d8b7
 TAR MD5: afbe34c8e97bc66c2af111c1ad3715ac
 ```
+
+For the list of delivered tickets, please consult the [Low-Level Release Notes for 6.0.0](../low-level_release_notes/6.x/6.0.x/6.0.0.md).
 
 ### Upgrade Notices
 
