--- a/docs/releases/low-level_release_notes/6.x/6.0.x/6.0.0.md
+++ b/docs/releases/low-level_release_notes/6.x/6.0.x/6.0.0.md
@@ -1,12 +1,13 @@
 # LLRN 6.0.0
 
-These are low-level release notes for IP Fabric release `6.0.0`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don't have access to the tickets. On the other, it can provide valuable information, if you are looking for a particular detail. This release of IP Fabric contains total of 578 issues.
+These are low-level release notes for IP Fabric release `6.0.0`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don't have access to the tickets. On the other, it can provide valuable information, if you are looking for a particular detail. This release of IP Fabric contains total of 579 issues.
 
 ## Epics
 
 Epics are high-level features, that may consist of many tasks.
 
 - [NIM-4425](https://ipfabric.atlassian.net/browse/NIM-4425) -- Medium -- cisco sg commands fixing (mother of all cisco sg fixes)
+- [NIM-6801](https://ipfabric.atlassian.net/browse/NIM-6801) -- Medium -- Zero-trust for virtual instances in cloud environments
 - [NIM-7949](https://ipfabric.atlassian.net/browse/NIM-7949) -- High -- Role-based access control (RBAC) - Phase 2
 - [NIM-8254](https://ipfabric.atlassian.net/browse/NIM-8254) -- Medium -- NAE-to-Backend-5.1
 - [DOS-682](https://ipfabric.atlassian.net/browse/DOS-682) -- Medium -- Release 6.0
@@ -116,7 +117,6 @@ Task may be associated into Epics or Stories to form complex features.
 - [NIM-8308](https://ipfabric.atlassian.net/browse/NIM-8308) -- Medium -- Implement command `show lldp remote-device all` to get LLDP information
 - [NIM-8326](https://ipfabric.atlassian.net/browse/NIM-8326) -- Medium -- RabbitMQ config to @ipfabric/backend-utils
 - [NIM-8383](https://ipfabric.atlassian.net/browse/NIM-8383) -- Medium -- LAG/Po not visible in Port-Channel Member State Table if no interface associated
-- [NIM-8440](https://ipfabric.atlassian.net/browse/NIM-8440) -- High -- ACI - pathlookup security
 - [DOS-634](https://ipfabric.atlassian.net/browse/DOS-634) -- Medium -- nimpee-install-2.0 - revert hiding locale error
 - [DOS-676](https://ipfabric.atlassian.net/browse/DOS-676) -- Medium -- net-config.sh accepts invalid hostname
 - [DOS-704](https://ipfabric.atlassian.net/browse/DOS-704) -- Medium -- fix grub-pc upgrade issues
