--- a/docs/releases/release_notes/6.0.md
+++ b/docs/releases/release_notes/6.0.md
@@ -2,7 +2,7 @@
 
 ## v6.0.1 (TBD)
 
-<!-- For the list of delivered tickets, please consult the [Low-Level Release Notes for 6.0.1](../low-level_release_notes/6.x/6.0.x/6.0.1.md). -->
+For the list of delivered tickets, please consult the [Low-Level Release Notes for 6.0.1](../low-level_release_notes/6.x/6.0.x/6.0.1.md).
 
 ### Bug Fixes
 
