--- a/docs/releases/release_notes/6.0.md
+++ b/docs/releases/release_notes/6.0.md
@@ -2,6 +2,18 @@
 
 ## v6.0.1 (TBD)
 
+```shell
+# ipfabric-6-0-1+1.ova
+OVA SHA256: 8037feda870d51cdd54d7a636babb38dde439366cc85a01604a5a1e5555236e8
+OVA MD5: e6912c2bdae80b2151a9f02079795404
+# ipfabric-6-0-1+1.qcow2
+QCOW SHA256: c403217b95b215b3751af3df03d891a2331da76dfbc0688d556cb0f154270d6e
+QCOW MD5: 074e0765a204b8edccc6343be548f985
+# ipfabric-update-6_0_1+0.tar.gz.sig
+TAR SHA256: c3669ad6c7008b9229da17d1e8199064a5e096cfbc0249ace12e55f70ba5045c
+TAR MD5: 59291d5e2a6a2274230c5cbe48a34de8
+```
+
 For the list of delivered tickets, please consult the [Low-Level Release Notes for 6.0.1](../low-level_release_notes/6.x/6.0.x/6.0.1.md).
 
 ### Bug Fixes
