--- a/docs/releases/release_notes/6.1.md
+++ b/docs/releases/release_notes/6.1.md
@@ -5,3 +5,4 @@
 ### Noticeable changes
 
 - Removed the End User Licensing agreement (EULA) acceptance step on a user's first log-in. A user approves EULA on loading a license.
+- Web front-end migrated from local storage to cookie-based storage for access and refresh tokens.
