--- a/docs/releases/release_notes/6.0.md
+++ b/docs/releases/release_notes/6.0.md
@@ -2,18 +2,18 @@
 
 --8<-- "snippets/clear_browser_cache.md"
 
-## v6.0.1 (Dec 20th, 2022)
+## v6.0.1 (Dec 21st, 2022)
 
 ```shell
-# ipfabric-6-0-1+1.ova
-OVA SHA256: 8037feda870d51cdd54d7a636babb38dde439366cc85a01604a5a1e5555236e8
-OVA MD5: e6912c2bdae80b2151a9f02079795404
-# ipfabric-6-0-1+1.qcow2
-QCOW SHA256: c403217b95b215b3751af3df03d891a2331da76dfbc0688d556cb0f154270d6e
-QCOW MD5: 074e0765a204b8edccc6343be548f985
-# ipfabric-update-6_0_1+0.tar.gz.sig
-TAR SHA256: c3669ad6c7008b9229da17d1e8199064a5e096cfbc0249ace12e55f70ba5045c
-TAR MD5: 59291d5e2a6a2274230c5cbe48a34de8
+# ipfabric-6-0-1+2.ova
+OVA SHA256: a5a32953dce07ca4382196a008f9951f1cf46dd742c4399e28284f5d447bd095
+OVA MD5: db20fbce5af3978ad4e6c72cb8319663
+# ipfabric-6-0-1+2.qcow2
+QCOW SHA256: e97f475dfe4481ca2cfc3cb38229e362a4459cae11d9e8e0dc3f8e31b8aba042
+QCOW MD5: 6b572847b7230d05f484710dfeca7404
+# ipfabric-update-6_0_1+2.tar.gz.sig
+TAR SHA256: 8df19286b3481f4eb042238636bde733c931ce1b6e51b3f6cd37a8cb525f225b
+TAR MD5: 426005561a1c0ebc0f399dcfdf102b8d
 ```
 
 For the list of delivered tickets, please consult the [Low-Level Release Notes for 6.0.1](../low-level_release_notes/6.x/6.0.x/6.0.1.md).
