SA-186 Move Known Issues

--- a/docs/releases/release_notes/6.0.md
+++ b/docs/releases/release_notes/6.0.md
@@ -20,7 +20,7 @@ For the list of delivered tickets, please consult the [Low-Level Release Notes f
 
 ### Bug Fixes
 
-- Filesystem access rights prevented proper configuration of [the customer's name in the generated techsupports](../known_issues/IP_Fabric/Customer_name_in_techsupport.md).
+- Filesystem access rights prevented proper configuration of [the customer's name in the generated techsupports](../../support/known_issues/IP_Fabric/Customer_name_in_techsupport.md).
 - Discovery -- _discovery_ was hanging on `loadGraphCache` causing infinite discovery
 - Logs -- large logs in `/var/log/nimpee/*` are now not divided into multiple files and are compressed
 - Path Lookup -- IP Fabric GUI crashed when running a certain _E2E Path Lookup_
