--- a/docs/releases/release_notes/previous_releases/IP_Fabric_v4.x.x/4.3.md
+++ b/docs/releases/release_notes/previous_releases/IP_Fabric_v4.x.x/4.3.md
@@ -209,7 +209,7 @@ OVA SHA256SUM: 3d07c8f1a51497eae671a43130cbf536b7e7bdf9ae6ba9030ebc50c981328119
 - The date and time values are now displayed in ISO8601 format
 - Cisco Firepower - Change collecting data to use FMC API and add
   support for application rules: More [Dropping support for ACL on
-  Cisco Firepower](../../../known_issues/cisco/Dropping_support_for_ACL_on_Cisco_Firepower.md)
+  Cisco Firepower](../../../../support/known_issues/Vendors/cisco/Dropping_support_for_ACL_on_Cisco_Firepower.md)
 - Added API endpoint POST `/v1/tables/management/snapshots` for the
   possibility to get information about all snapshots (loaded,
   unloaded) via [API](../../../../../IP_Fabric_API/Path_Lookup/)
