ST-147_improve_rbac_attribute

--- a/docs/releases/release_notes/6.0.md
+++ b/docs/releases/release_notes/6.0.md
@@ -71,10 +71,14 @@ Site separation is also fully backed by attributes by now. That resulted in API 
 
 ### RBAC
 
-You can now specify the level of access a user has by restricting the ability to use certain API Endpoints, or you can restrict which devices the user has access to via Device Attributes. New settings can be found under:
+You can now specify the level of access a user has by restricting the ability to use only certain **API Endpoints** (API calls), or you can restrict which devices the user has access to via `siteName` **Attributes scope**. New settings can be found under:
 
 - `Settings` --> `User Management` --> `Polices`
 - `Settings` --> `User Management` --> `Roles`
+
+!!! Info
+
+	If you have defined `custom roles` in the 5.0 release, create a new **Attributes scope** policy to allow access to sites users need access to. Also define new **API Endpoints Scope** if needed. See, [Policies](../../IP_Fabric_Settings/user_management/policies.md).
 
 ### Assurance Engine
 
