Mark 6.1 as unreleased version

--- a/docs/releases/release_notes/6.1.md
+++ b/docs/releases/release_notes/6.1.md
@@ -1,5 +1,9 @@
 # IP Fabric v6.1 (Burlap)
 
+!!! danger "Unreleased version"
+
+    This is an upcoming IP Fabric version, which has not been released yet and is not available for download.
+
 --8<-- "snippets/clear_browser_cache.md"
 
 ## v6.1.0 (TBD)
