--- a/docs/releases/release_notes_low-level/6.x/6.0.x/6.0.1.md
+++ b/docs/releases/release_notes_low-level/6.x/6.0.x/6.0.1.md
@@ -1,6 +1,6 @@
 # LLRN 6.0.1
 
-These are low-level release notes for IP Fabric release `6.0.1`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don't have access to the tickets. On the other, it can provide valuable information, if you are looking for a particular detail. This release of IP Fabric contains total of 26 issues.
+These are low-level release notes for IP Fabric release `6.0.1`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don't have access to the tickets. On the other, it can provide valuable information, if you are looking for a particular detail. This release of IP Fabric contains total of 28 issues.
 
 ## Bugs
 
@@ -27,7 +27,9 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - [NIM-9706](https://ipfabric.atlassian.net/browse/NIM-9706) -- Highest -- API scopes policy - can't save all api scope
 - [NIM-9780](https://ipfabric.atlassian.net/browse/NIM-9780) -- Medium -- Snapshot calculations failing on `Storing 862169 syntax search data records in db`
 - [NIM-9791](https://ipfabric.atlassian.net/browse/NIM-9791) -- High -- Shaper settings unavailable
+- [NIM-9877](https://ipfabric.atlassian.net/browse/NIM-9877) -- Medium -- Error: Job stopped (too many resumes)
 - [DOS-860](https://ipfabric.atlassian.net/browse/DOS-860) -- Medium -- License upload does not update customer name in sys-nimpee.conf
+- [DOS-893](https://ipfabric.atlassian.net/browse/DOS-893) -- High -- Appliance should have locked password for user root, not password-less root
 
 ## Tasks
 
