--- a/docs/releases/release_notes/6.1.md
+++ b/docs/releases/release_notes/6.1.md
@@ -12,3 +12,7 @@
 
 - Removed the End User Licensing agreement (EULA) acceptance step on a user's first log-in. A user approves EULA on loading a license.
 - Web front-end migrated from local storage to cookie-based storage for access and refresh tokens.
+
+### Upgrade Notices
+
+- Forcepoint -- More feature supported, mainly added support for SMC API (see our [feature matrix](https://matrix.ipfabric.io) for more details).
