--- a/docs/releases/release_notes/6.1.md
+++ b/docs/releases/release_notes/6.1.md
@@ -13,6 +13,10 @@
 - Removed the End User Licensing agreement (EULA) acceptance step on a user's first log-in. A user approves EULA on loading a license.
 - Web front-end migrated from local storage to cookie-based storage for access and refresh tokens.
 
+### Network Discovery
+- AWS - The IAM policy has been updated. There are 2 more endpoints required for the discovery of AWS infrastructure. See the [Amazon Web Services](../../IP_Fabric_Settings/advanced/Vendors_API/AWS_Amazon_Web_Services.md) page.
+
 ### Upgrade Notices
 
-- Forcepoint -- More feature supported, mainly added support for SMC API (see our [feature matrix](https://matrix.ipfabric.io) for more details).
+- Forcepoint -- More features supported, mainly added support for SMC API (see our [feature matrix](https://matrix.ipfabric.io) for more details).
+
