NIM-9708 added Brocade stack to RN

--- a/docs/releases/release_notes/6.1.md
+++ b/docs/releases/release_notes/6.1.md
@@ -15,6 +15,7 @@
 
 ### Network Discovery
 - AWS - The IAM policy has been updated. There are 2 more endpoints required for the discovery of AWS infrastructure. See the [Amazon Web Services](../../IP_Fabric_Settings/advanced/Vendors_API/AWS_Amazon_Web_Services.md) page.
+- Brocade -- added support for stack.
 
 ### Upgrade Notices
 
