--- a/docs/releases/release_notes_low-level/6.x/6.0.x/6.0.0.md
+++ b/docs/releases/release_notes_low-level/6.x/6.0.x/6.0.0.md
@@ -19,7 +19,7 @@ Stories are high-level features, that may consist of many tasks. These would typ
 - [NIM-4433](https://ipfabric.atlassian.net/browse/NIM-4433) -- Medium -- Virtual contexts table (initial implementation)
 - [NIM-5648](https://ipfabric.atlassian.net/browse/NIM-5648) -- Medium -- Route Maps on Cisco
 - [NIM-5826](https://ipfabric.atlassian.net/browse/NIM-5826) -- High -- Policy-Based Routing on Cisco
-- [NIM-6680](https://ipfabric.atlassian.net/browse/NIM-6680) -- High -- Implement NAT for Firewall Vendors
+- [NIM-6680](https://ipfabric.atlassian.net/browse/NIM-6680) -- High -- Implement NAT Model for Firewall Vendors For Future NAT Support
 - [NIM-7411](https://ipfabric.atlassian.net/browse/NIM-7411) -- Medium -- Handling of hostname and domains
 - [NIM-7530](https://ipfabric.atlassian.net/browse/NIM-7530) -- High -- Cleanup handling of custom CA / system certificates
 - [NIM-7688](https://ipfabric.atlassian.net/browse/NIM-7688) -- High -- Forcepoint - Basic discovery [ Mother ticket]
