NIM-9758: add Prisma do RL and documentation

--- a/docs/releases/release_notes/6.1.md
+++ b/docs/releases/release_notes/6.1.md
@@ -14,10 +14,11 @@
 - Web front-end migrated from local storage to cookie-based storage for access and refresh tokens.
 
 ### Network Discovery
-- AWS - The IAM policy has been updated. There are 2 more endpoints required for the discovery of AWS infrastructure. See the [Amazon Web Services](../../IP_Fabric_Settings/advanced/Vendors_API/AWS_Amazon_Web_Services.md) page.
+
+- Palo Alto Prisma -- Added support of basic discovery (see our [feature matrix](https://matrix.ipfabric.io) for more details).
+- AWS -- The IAM policy has been updated. There are 2 more endpoints required for the discovery of AWS infrastructure. See the [Amazon Web Services](../../IP_Fabric_Settings/advanced/Vendors_API/AWS_Amazon_Web_Services.md) page.
 - Brocade -- added support for stack.
 
 ### Upgrade Notices
 
 - Forcepoint -- More features supported, mainly added support for SMC API (see our [feature matrix](https://matrix.ipfabric.io) for more details).
-
