NIM-7063: Highlight `slug` and `comment` fields for vendor's API

--- a/docs/releases/release_notes/6.1.md
+++ b/docs/releases/release_notes/6.1.md
@@ -12,6 +12,7 @@
 
 - Removed the End User Licensing agreement (EULA) acceptance step on a user's first log-in. A user approves EULA on loading a license.
 - Web front-end migrated from local storage to cookie-based storage for access and refresh tokens.
+- Vendor API configuration now has two additional fields -- `slug` and `comment`. See the [API section](../../IP_Fabric_Settings/advanced/Vendors_API/index.md#slug-and-comment) for more information.
 
 ### Network Discovery
 
