Update LLRN with pagination implemented and including sub-tasks

--- a/docs/releases/release_notes_low-level/4.x/4.3.x/4.3.2.md
+++ b/docs/releases/release_notes_low-level/4.x/4.3.x/4.3.2.md
@@ -1,6 +1,6 @@
 # LLRN 4.3.2
 
-These are low-level release notes for IP Fabric release `4.3.2`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don't have access to the tickets. On the other, it can provide valuable information, if you are looking for a particular detail. This release of IP Fabric contains total of 15 issues.
+These are low-level release notes for IP Fabric release `4.3.2`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don't have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release of IP Fabric contains a total of 15 issues.
 
 ## Bugs
 
