--- a/docs/releases/release_notes_low-level/5.x/5.0.x/5.0.1.md
+++ b/docs/releases/release_notes_low-level/5.x/5.0.x/5.0.1.md
@@ -1,6 +1,6 @@
 # LLRN 5.0.1
 
-These are low-level release notes for IP Fabric release `5.0.1`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don't have access to the tickets. On the other, it can provide valuable information, if you are looking for a particular detail. This release of IP Fabric contains total of 70 issues.
+These are low-level release notes for IP Fabric release `5.0.1`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don't have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release of IP Fabric contains a total of 70 issues.
 
 ## Epics
 
@@ -80,3 +80,14 @@ Task may be associated into Epics or Stories to form complex features.
 - [DOS-629](https://ipfabric.atlassian.net/browse/DOS-629) -- High -- Do not enable discovery services during package installation
 - [DOS-672](https://ipfabric.atlassian.net/browse/DOS-672) -- Medium -- Promote ipf-appliance 5.0.0+47 versions to prod deb repository
 - [DOS-678](https://ipfabric.atlassian.net/browse/DOS-678) -- Medium -- Upgrade arangodb to latest patch for 5.0.1 release
+
+## Sub-Tasks
+
+Sub-tasks are very well contained work packages, organized under Tasks.
+
+- [NIM-8355](https://ipfabric.atlassian.net/browse/NIM-8355) -- Medium -- Prepare Check Point R81.10 image in EVE
+- [NIM-8612](https://ipfabric.atlassian.net/browse/NIM-8612) -- High -- Create a task/cmd for fetching CMD output from customer for Fabric Path implementation.
+- [NIM-8674](https://ipfabric.atlassian.net/browse/NIM-8674) -- Medium -- NSX-T wrong mapping for segments without admin_state
+- [NIM-8678](https://ipfabric.atlassian.net/browse/NIM-8678) -- Medium -- NSX-T wrong T0 router id
+- [NIM-8680](https://ipfabric.atlassian.net/browse/NIM-8680) -- High -- NSX-T private T1 routers without uplink to public network
+- [NIM-8681](https://ipfabric.atlassian.net/browse/NIM-8681) -- Medium -- NSX-T empty responses for api calls for T1 and T0 routers
