--- a/docs/releases/release_notes_low-level/6.x/6.0.x/6.0.1.md
+++ b/docs/releases/release_notes_low-level/6.x/6.0.x/6.0.1.md
@@ -1,6 +1,6 @@
 # LLRN 6.0.1
 
-These are low-level release notes for IP Fabric release `6.0.1`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don't have access to the tickets. On the other, it can provide valuable information, if you are looking for a particular detail. This release of IP Fabric contains total of 28 issues.
+These are low-level release notes for IP Fabric release `6.0.1`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don't have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release of IP Fabric contains a total of 29 issues.
 
 ## Bugs
 
@@ -37,3 +37,11 @@ Task may be associated into Epics or Stories to form complex features.
 
 - [NIM-8856](https://ipfabric.atlassian.net/browse/NIM-8856) -- Medium -- Add uid field to device policy API response
 - [NIM-9627](https://ipfabric.atlassian.net/browse/NIM-9627) -- High -- Backport Cisco APIC client to detect and act on 400/dataset is too big to 6.0.x
+- [DOS-904](https://ipfabric.atlassian.net/browse/DOS-904) -- Low -- Investigate usefulness of apt logs in techsupport
+
+## Sub-Tasks
+
+Sub-tasks are very well contained work packages, organized under Tasks.
+
+- [NIM-9583](https://ipfabric.atlassian.net/browse/NIM-9583) -- Medium -- Cisco PBR - not found referenced ACL + typo in emitted message
+- [NIM-9738](https://ipfabric.atlassian.net/browse/NIM-9738) -- Medium -- Cisco APIC - SSH/API matching improvement
