--- a/docs/releases/release_notes/5.0.md
+++ b/docs/releases/release_notes/5.0.md
@@ -82,8 +82,8 @@ QCOW MD5: 0204de624001d1dfe8067e68f11ef3c5
 
     `ipfabric` and `ipfabric-diagrams` Python SDK's have been updated to
     support the new changes. Please visit
-    [python-ipfabric](https://github.com/community-fabric/python-ipfabric) and
-    [python-ipfabric-diagrams](https://github.com/community-fabric/python-ipfabric-diagrams)
+    [python-ipfabric](https://pypi.org/project/ipfabric/) and
+    [python-ipfabric-diagrams](https://pypi.org/project/ipfabric-diagrams/)
     for more information.
 
 !!! warning "SSO and API versioning"
