--- a/docs/releases/release_notes/6.1.md
+++ b/docs/releases/release_notes/6.1.md
@@ -20,6 +20,7 @@
 - AWS -- The IAM policy has been updated. There are 2 more endpoints required for the discovery of AWS infrastructure. See the [Amazon Web Services](../../IP_Fabric_Settings/advanced/Vendors_API/AWS_Amazon_Web_Services.md) page.
 - Brocade -- Added support for stack.
 - Alcatel -- Added support of basic discovery (see our [feature matrix](https://matrix.ipfabric.io) for more details).
+- Policy Based Routing (PBR) -- Added support for PBR on Cisco (IOS, IOS-XE, NX-OS), FortiGate (Fortinet) and HP (Comware) devices. See [Routing](../../IP_Fabric_GUI/Technology_Tables/Routing.md) page
 
 ### Upgrade Notices
 
