--- a/docs/releases/release_notes/6.1.md
+++ b/docs/releases/release_notes/6.1.md
@@ -13,6 +13,7 @@
 - Removed the End User Licensing agreement (EULA) acceptance step on a user's first log-in. A user approves EULA on loading a license.
 - Web front-end migrated from local storage to cookie-based storage for access and refresh tokens.
 - Vendor API configuration now has two additional fields -- `slug` and `comment`. See the [API section](../../IP_Fabric_Settings/advanced/Vendors_API/index.md#slug-and-comment) for more information.
+- Clearing the database while keeping application settings no longer removes API tokens from the database.
 
 ### Network Discovery
 
