--- a/docs/releases/release_notes/6.1.md
+++ b/docs/releases/release_notes/6.1.md
@@ -12,7 +12,8 @@
 
 - Removed the End User Licensing agreement (EULA) acceptance step on a user's first log-in. A user approves EULA on loading a license.
 - Web front-end migrated from local storage to cookie-based storage for access and refresh tokens.
-- Vendor API configuration now has two additional fields -- `slug` and `comment`. See the [API section](../../IP_Fabric_Settings/advanced/Vendors_API/index.md#slug-and-comment) for more information.
+- Vendor API configuration now has two additional fields -- `slug` (**required**) and `comment` (optional). See the [API section](../../IP_Fabric_Settings/advanced/Vendors_API/index.md#slug-and-comment) for more information.
+  - During the upgrade the required field `slug` will be auto-generated for all current configured API providers.
 - Clearing the database while keeping application settings no longer removes API tokens from the database.
 
 ### Network Discovery
