NIM-10108 Extend roleName documentation

--- a/docs/releases/release_notes/6.1.md
+++ b/docs/releases/release_notes/6.1.md
@@ -15,6 +15,9 @@
 - Vendor API configuration now has two additional fields -- `slug` (**required**) and `comment` (optional). See the [API section](../../IP_Fabric_Settings/advanced/Vendors_API/index.md#slug-and-comment) for more information.
   - During the upgrade the required field `slug` will be auto-generated for all current configured API providers.
 - Clearing the database while keeping application settings no longer removes API tokens from the database.
+- SSO configuration now allows for the use of `roleName` in the `/opt/nimpee/conf.d/api.json` file. Please see [Single Sign On (SSO)](../../IP_Fabric_Settings/user_management/sso.md).
+  - It is recommended to migrate from `roleId` to `roleName` for consistency and human readability.
+
 
 ### Network Discovery
 
