NIM-9590 upgrade unloads all snapshots

--- a/docs/releases/release_notes/6.1.md
+++ b/docs/releases/release_notes/6.1.md
@@ -17,7 +17,7 @@
 - Clearing the database while keeping application settings no longer removes API tokens from the database.
 - SSO configuration now allows for the use of `roleName` in the `/opt/nimpee/conf.d/api.json` file. Please see [Single Sign On (SSO)](../../IP_Fabric_Settings/user_management/sso.md).
   - It is recommended to migrate from `roleId` to `roleName` for consistency and human readability.
-
+- During the upgrade, all snapshots -- including locked snapshots -- will be unloaded. Once the upgrade is completed, please load an existing snapshot, or perform a new discovery to populate network data in IP Fabric.
 
 ### Network Discovery
 
