--- a/docs/releases/release_notes/6.1.md
+++ b/docs/releases/release_notes/6.1.md
@@ -26,6 +26,7 @@
 - Brocade -- Added support for stack.
 - Alcatel -- Added support of basic discovery (see our [feature matrix](https://matrix.ipfabric.io) for more details).
 - Policy Based Routing (PBR) -- Added support for PBR on Cisco (IOS, IOS-XE, NX-OS), FortiGate (Fortinet) and HP (Comware) devices. See [Routing](../../IP_Fabric_GUI/Technology_Tables/Routing.md) page
+- HP Comware -- Added support for route-policies and routing protocols filter-policies. There is a known issue in case route-policy and policy-based-route have the same name, only policy-based-route will be visible in route-maps table.
 
 ### Upgrade Notices
 
