Add release notes for backend-product-team

--- a/docs/releases/release_notes/6.1.md
+++ b/docs/releases/release_notes/6.1.md
@@ -18,6 +18,7 @@
 - SSO configuration now allows for the use of `roleName` in the `/opt/nimpee/conf.d/api.json` file. Please see [Single Sign On (SSO)](../../IP_Fabric_Settings/user_management/sso.md).
   - It is recommended to migrate from `roleId` to `roleName` for consistency and human readability.
 - During the upgrade, all snapshots -- including locked snapshots -- will be unloaded. Once the upgrade is completed, please load an existing snapshot, or perform a new discovery to populate network data in IP Fabric.
+- String table columns now support case insensitive regular expression operator and its negation.
 
 ### Network Discovery
 
@@ -27,6 +28,7 @@
 - Alcatel -- Added support of basic discovery (see our [feature matrix](https://matrix.ipfabric.io) for more details).
 - Policy Based Routing (PBR) -- Added support for PBR on Cisco (IOS, IOS-XE, NX-OS), FortiGate (Fortinet) and HP (Comware) devices. See [Routing](../../IP_Fabric_GUI/technology_tables/routing.md) page
 - HP Comware -- Added support for route-policies and routing protocols filter-policies. There is a known issue in case route-policy and policy-based-route have the same name, only policy-based-route will be visible in route-maps table.
+- Silver Peak -- Added support for two new login types (RADIUS and TACACS+).
 
 ### Upgrade Notices
 
