--- a/docs/releases/release_notes/6.1.md
+++ b/docs/releases/release_notes/6.1.md
@@ -19,6 +19,7 @@
   - It is recommended to migrate from `roleId` to `roleName` for consistency and human readability.
 - During the upgrade, all snapshots -- including locked snapshots -- will be unloaded. Once the upgrade is completed, please load an existing snapshot, or perform a new discovery to populate network data in IP Fabric.
 - String table columns now support case insensitive regular expression operator and its negation.
+- Added support for FabricPath end-to-end path lookup.
 
 ### Network Discovery
 
