NIM-10088: add information detail about Viptela in CLI and vManage mode

--- a/docs/releases/release_notes/6.1.md
+++ b/docs/releases/release_notes/6.1.md
@@ -30,6 +30,7 @@
 - Policy Based Routing (PBR) -- Added support for PBR on Cisco (IOS, IOS-XE, NX-OS), FortiGate (Fortinet) and HP (Comware) devices. See [Routing](../../IP_Fabric_GUI/technology_tables/routing.md) page
 - HP Comware -- Added support for route-policies and routing protocols filter-policies. There is a known issue in case route-policy and policy-based-route have the same name, only policy-based-route will be visible in route-maps table.
 - Silver Peak -- Added support for two new login types (RADIUS and TACACS+).
+- Cisco Viptela -- When device isn't synchronized with vManage, information from configuration isn't downloaded.
 
 ### Upgrade Notices
 
