--- a/docs/releases/release_notes_low-level/6.x/6.0.x/6.0.1.md
+++ b/docs/releases/release_notes_low-level/6.x/6.0.x/6.0.1.md
@@ -37,7 +37,7 @@ Task may be associated into Epics or Stories to form complex features.
 
 - [NIM-8856](https://ipfabric.atlassian.net/browse/NIM-8856) -- Medium -- Add uid field to device policy API response
 - [NIM-9627](https://ipfabric.atlassian.net/browse/NIM-9627) -- High -- Backport Cisco APIC client to detect and act on 400/dataset is too big to 6.0.x
-- [DOS-904](https://ipfabric.atlassian.net/browse/DOS-904) -- Low -- Investigate usefulness of apt logs in techsupport
+- [DOS-904](https://ipfabric.atlassian.net/browse/DOS-904) -- Low -- Add apt logs to techsupport
 
 ## Sub-Tasks
 
