--- a/docs/releases/release_notes_low-level/6.x/6.0.x/6.0.0.md
+++ b/docs/releases/release_notes_low-level/6.x/6.0.x/6.0.0.md
@@ -1,6 +1,6 @@
 # LLRN 6.0.0
 
-These are low-level release notes for IP Fabric release `6.0.0`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don't have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release of IP Fabric contains a total of 579 issues.
+These are low-level release notes for IP Fabric release `6.0.0`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don't have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release of IP Fabric contains a total of 580 issues.
 
 ## Epics
 
@@ -323,6 +323,7 @@ Task may be associated into Epics or Stories to form complex features.
 - [NIM-8080](https://ipfabric.atlassian.net/browse/NIM-8080) -- Medium -- Update dependencies in webhookWorker repository
 - [NIM-8081](https://ipfabric.atlassian.net/browse/NIM-8081) -- Medium -- Update dependencies in nimpeeMigrate repository
 - [NIM-8130](https://ipfabric.atlassian.net/browse/NIM-8130) -- Medium -- Rework DB + snapshot migrations
+- [NIM-8138](https://ipfabric.atlassian.net/browse/NIM-8138) -- Medium -- tasks/l2Interfaces - remove vlans property
 - [NIM-8178](https://ipfabric.atlassian.net/browse/NIM-8178) -- Medium -- Design Filter Scope policy type page
 - [NIM-8179](https://ipfabric.atlassian.net/browse/NIM-8179) -- Medium -- Design Access Scope picker
 - [NIM-8199](https://ipfabric.atlassian.net/browse/NIM-8199) -- Medium -- technology/load-balancing/virtual-servers - add column "vrf"
